docs/7.54/md/abenddic_decimal_floating_point.md
---
title: "Decimal Floating Point Numbers"
description: |
  In decimal floating point numbers(https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abendecfloat_glosry.htm 'Glossary Entry'), a maximum of 16 or 34 places exactly are returned in the mantissa depending on the data type. -   Handling in ABAP Dictionary(#abenddic-decimal-floating-point-1
version: "7.54"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_decimal_floating_point.htm"
abapFile: "abenddic_decimal_floating_point.htm"
keywords: ["select", "update", "do", "if", "case", "try", "data", "types", "abenddic", "decimal", "floating", "point"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dictionary.htm) →  [Built-In Data Types in ABAP Dictionary](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types_intro.htm) →  [Attributes of the Predefined Dictionary Types](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types_prop.htm) →  [General Dictionary Types](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types_general.htm) → 

Decimal Floating Point Numbers

In [decimal floating point numbers](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abendecfloat_glosry.htm "Glossary Entry"), a maximum of 16 or 34 places exactly are returned in the mantissa depending on the data type.

-   [Handling in ABAP Dictionary](#abenddic-decimal-floating-point-1--------decimal-floating-point-types---@ITOC@@ABENDDIC_DECIMAL_FLOATING_POINT_2)

-   [Replacement Types](#abenddic-decimal-floating-point-3--------handling-in-dynpros---output-length-and-output-style---@ITOC@@ABENDDIC_DECIMAL_FLOATING_POINT_4)

-   [Handling in ABAP Programs](#@@ITOC@@ABENDDIC_DECIMAL_FLOATING_POINT_5)

Handling in ABAP Dictionary

In ABAP Dictionary, the following data types are available for decimal floating numbers.

Decimal Floating Point Types

The following built-in ABAP Dictionary data types represent real floating point types of a database:

-   [DECFLOAT16](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) for 16-digit numbers.

-   [DECFLOAT34](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) for 34-digit numbers.

They can be used, without restrictions, as numeric data types in appropriate expressions and functions. They are currently only supported by [SAP HANA databases](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenhana_database_glosry.htm "Glossary Entry").

Replacement Types

The following built-in data types in ABAP Dictionary are used as replacements for real decimal floating point types:

-   [DF16\_DEC](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) and [DF16\_RAW](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) for 16-digit numbers.

-   [DF34\_DEC](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) and [DF34\_RAW](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types.htm) for 34-digit numbers.

These types can be used as replacements on database systems that do not support decimal floating point types. They are mainly used to save decimal floating point numbers from ABAP programs and have only restricted use as numeric data types in appropriate expressions and functions:

-   DF16\_DEC and DF34\_DEC
    In database fields of this type, decimal floating point numbers are stored as a packed number (format [DEC](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types_int_pack.htm)). The length and the number of decimal places must be specified when defining a data type in ABAP Dictionary. For this type, restricted operations can be performed on the database:

-   No operands of these types can be used in [arithmetic SQL expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_arith.htm) or [numeric SQL functions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_arith_func.htm).

-   Columns, but no SQL expressions of these types, can be used as operands in the [aggregate functions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapselect_aggregate.htm) except for STRING\_AGG.

-   In the statement [UPDATE](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapupdate.htm), operations with these types are possible with [SET + and \-](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapupdate_set_expression.htm).

-   Database fields with these types can be edited in [Native SQL](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abennative_sql_glosry.htm "Glossary Entry") or [AMDP](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenamdp_glosry.htm "Glossary Entry").

-   When there is a write to the database, the system implicitly rounds off to the number of decimal places and decimal overflows can occur.

-   DF16\_RAW and DF34\_RAW
    In database fields of this type, decimal floating point numbers are stored as binary (in RAW format). The length is set to 16 or 34 places. Values can be sorted, compared, and used in indexes. For this type, no calculations can be performed on the database. This is an SAP-specific format, which means that the corresponding fields also cannot be edited in [Native SQL](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abennative_sql_glosry.htm "Glossary Entry") or [AMDP](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenamdp_glosry.htm "Glossary Entry"). The scaling is lost when writing to the database.

Notes

-   If possible, the types DECFLOAT16 and DECFLOAT34 should be used.

-   The case in question determines which replacement type needs to be used if necessary:

-   The types DF16\_DEC and DF34\_DEC can be used for calculations on the database, but their value ranges are smaller than those of real decimal floating point numbers.

-   The types DF16\_RAW and DF34\_RAW cover the whole value range, but are not recognized as numbers by the databases.

-   As in the [general packed numbers](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_builtin_types_int_pack.htm), the number of places in the replacement types DF16\_DEC and DF34\_DEC should be odd.

-   In [ABAP CDS](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abencds.htm) it is not usually possible to execute expressions or functions for the replacement types.

-   As well as the types above, there are also the [obsolete](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_obsolete_types.htm) replacement types DF16\_SCL and DF34\_SCL for decimal floating point numbers with [scaling](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenscale_glosry.htm "Glossary Entry").

-   In database fields of this type, decimal floating point numbers are stored in the same way as DF16\_RAW or DF34\_RAW (length 16 or 34 places, and the same restrictions apply). The scaling must be specified in a direct successor database field with type INT2. When a decimal floating point number is written, this field is filled automatically with the scaling and the scaling is taken from it in reads.

-   It is strongly advised not to use the types DF16\_SCL and DF34\_SCL. Their functions are rarely needed and the additional column for scaling makes them too complicated and error-prone to use correctly.

Handling in Dynpros - Output Length and Output Style

The maximum output length that can be specified in a [domain](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenddic_domains.htm) for a 16-character decimal floating point number is 24. For a 34-character number, 46 is the maximum output length. These are also the default values.

In a domain, or directly in a structure component created using one of the types for decimal floating numbers (but not in data elements with directly specified technical attributes), one of the following output styles is always defined. The output style defines how a dynpro field defined with reference to this domain (or a corresponding ABAP field in the case of list output) is formatted:

-   Simple

Mathematical or scientific notation (depending on space)

-   Leading sign to the right

Commercial notation (canceled if not enough space, instead of implicit transformation to scientific notation)

-   Scale-preserving

Format with preservation of scaling, including trailing zeroes in the decimal places

-   Scientific

Scientific notation

-   Scientific with leading zero

Scientific notation with a 0 as an integer digit

-   Scale-preserving scientific

Scientific notation including trailing zeroes in the mantissa.

-   Technical

Scientific notation where the exponent is always an integer and a multiple of 3. The value range of the integer digits is between 1 and 999 (except if the source field has the value 0).

For dynpro fields whose data type is not defined in ABAP Dictionary, the output style can also be determined in [Screen Painter](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenscreen_painter_glosry.htm "Glossary Entry"). In the case of formatting with the statements [WRITE](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapwrite-.htm) or [WRITE TO](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapwrite_to.htm), the addition [STYLE](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapwrite_ext_options.htm) is available (as for the [string templates](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapcompute_string_format_options.htm)).

Notes

-   If scientific notation is used, a limited number of the displayed places in the mantissa is recommended. This can be specified using the built-in function [rescale](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abendec_floating_point_functions.htm).

-   The "scale-preserving" style ensures that the scaling is restored in conversions from dynpro fields to ABAP, and not just the original value.

-   If vertically aligned decimal separators and exponents are needed on UIs, the scale-preserving scientific notation can be used.

Handling in ABAP Programs

The ABAP types that correspond to the 16 or 34 figure decimal floating numbers in ABAP Dictionary are decfloat16 and decfloat34, which are handled internally according to the IEEE-754-2008 standard, and are supported by all ABAP operations. There is restricted support for floating point numbers with replacement types in [SQL expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapsql_expr.htm). In [arithmetic SQL expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_arith.htm), only those decimal floating point numbers are supported that are based on the decimal floating point types.

The addition [STYLE](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapwrite_to_options.htm) after [WRITE *\[*TO*\]*](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapwrite_to.htm) and the formatting option [STYLE](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapcompute_string_format_options.htm) in [embedded expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenstring_templates_expressions.htm) are available for the formatting of decimal floating numbers in programs. These overwrite the output style defined in ABAP Dictionary.